[package]
name = "grass-driver"
version = "0.1.4"
edition = "2021"
license = "MIT"
description = "Driver for GRASS"
repository = "https://github.com/38/grass"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.136", features = ["derive"]}
serde_json = "1.0.79"
tempfile = "3.3.0"
log="0.4.14"
env_logger = "0.9.0"
sha = "1.0.3"
file-lock = "2.1.3"

[dependencies.grass-ir]
version = "0.1.4"
# path = "../grass-ir"

[lib]
path = "src/lib.rs"
