[package]
name = "grass-ir"
version = "0.1.4"
edition = "2021"
license = "MIT"
description = "IR for GRASS"
repository = "https://github.com/38/grass"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.136", features = ["derive"] }
serde_json = {version = "1.0.79", optional = true}

[dev-dependencies]
serde_json = {version = "1.0.79"}

[[bin]]
name = "grass-ir-validator"
path = "src/validator.rs"
required-features = ["serde_json"]
