[package]
name = "grass-macro-test"
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.grass-macro]
version = "0.1.3"
#path = "../grass-macro"

[dependencies.grass-runtime]
version = "0.1.3"
#path = "../grass-runtime"
