[package]
name = "grass-runtime"
version = "0.1.2"
edition = "2021"
license = "MIT"
description = "Runtime library for GRASS"
repository = "https://github.com/38/grass"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
memchr = "2.4.1"
rand = "0.8.5"
