[package]
name = "grass-runtime"
version = "0.1.4"
edition = "2021"
license = "MIT"
description = "Runtime library for GRASS"
repository = "https://github.com/38/grass"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
memchr = "2.4.1"
rand = "0.8.5"
itertools = "0.10.3"

[dependencies.d4-hts]
version = "0.3.5"
optional = true

[features]
htslib = ["d4-hts"]
default = ["htslib"]