[package]
name = "pygrass"
version = "0.1.4-6"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pyo3 = "0.16.1"
env_logger = "0.9.0"
serde_json = "1.0.79"

[dependencies.grass-driver]
#version = "0.1.4"
path = "../grass-driver"

[lib]
crate-type = ["cdylib"]
